// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawerHandler/> render with default/required props 1`] = `
<DocumentFragment>
  <button
    data-cy="--drawer--open"
  />
</DocumentFragment>
`;

exports[`<DrawerHandler/> render with optional/required props 1`] = `
<DocumentFragment>
  <button
    data-cy="optionalProps.data-cy--drawer--open"
  />
</DocumentFragment>
`;
